<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/followtv"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/follow"
        android:textSize="80sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="80dp"/>

    <ImageView
        android:contentDescription="@string/todo"
        android:src="@drawable/red_arrow"
        app:layout_constraintTop_toBottomOf="@id/followtv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/metv"
        app:layout_constraintBottom_toBottomOf="@id/metv"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/metv"
        app:layout_constraintTop_toBottomOf="@id/followtv"
        android:text="@string/me"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:textSize="80sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="80dp"/>

    <ImageView
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/map_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/btnstarttrip"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnfollowme"
        android:layout_marginBottom="30dp"
        android:layout_marginHorizontal="60dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/start_trip"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:background="@drawable/lead_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"/>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/btnfollowme"
        app:cardBackgroundColor="@color/gray"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"
        android:layout_marginHorizontal="60dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/follow_tirp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:background="@drawable/follow_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"/>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>