<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/icon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_launcher_round"
        android:layout_width="35dp"
        android:layout_height="35dp"/>
    <TextView
        android:text="@string/follow_me"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/plc"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/please_login_to_continue"
        app:layout_constraintTop_toBottomOf="@id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plc"
        android:id="@+id/usernameLayout"
        android:layout_width="match_parent"
        android:hint="@string/user_name"
        app:endIconMode="none"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameedit"
            android:textColor="@color/black"
            android:singleLine="true"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLayout"
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        app:errorEnabled="false"
        android:hint="@string/password"
        app:endIconMode="password_toggle"

        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passswordedit"
            android:textColor="@color/black"
            android:singleLine="true"
            android:textSize="13sp"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checksavecredetial"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        android:text="@string/save_credetial"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_marginTop="10dp"
        android:letterSpacing="0"
        android:textStyle="bold"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checksavecredetial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:rippleColor="?attr/colorPrimary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:letterSpacing="0"
        android:textStyle="bold"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checksavecredetial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:rippleColor="?attr/colorPrimary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_marginTop="10dp"
        android:letterSpacing="0"
        android:textStyle="bold"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/checksavecredetial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Skip Now"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:rippleColor="?attr/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>