<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/icon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_launcher_round"
        android:layout_width="35dp"
        android:layout_height="35dp"/>

    <TextView
        android:id="@+id/title"
        android:text="Follow Me"
        android:layout_marginStart="15dp"
        android:textSize="17sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/message"
        android:text="Please provide a Trip ID for this journey.\nShare this ID with your friends."
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editid"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/type_here"
        android:maxLength="100"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/message"
        android:padding="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_generate"
        android:letterSpacing="0"
        android:textStyle="bold"
        android:textSize="13sp"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:rippleColor="?attr/colorPrimary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:letterSpacing="0"
        android:textStyle="bold"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_ok"
        app:layout_constraintTop_toBottomOf="@id/editid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:rippleColor="?attr/colorPrimary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok"
        android:letterSpacing="0"
        android:textStyle="bold"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textAllCaps="false"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:rippleColor="?attr/colorPrimary"/>


</androidx.constraintlayout.widget.ConstraintLayout>